--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hapi/boom": "^10.0.1",
-    "@types/node": "^18.0.6",
+    "@types/node": "^20.0.0",
     "@whiskeysockets/baileys": "^v7.0.0-rc.9",
     "awesome-phonenumber": "^5.9.0",
     "axios": "^1.8.4",
@@ -33,7 +33,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.4.5",
     "events": "^3.3.0",
-    "file-type": "^16.5.4",
+    "file-type": "^21.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.1",
     "fs-extra": "^11.2.0",
@@ -76,6 +76,7 @@
     "jimp": "^1.6.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
