--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "krishiranMD",
   "version": "1.0.0",
-  "description": "WhatsApp Bot",
+  "description": "WhatsApp Bot Public",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -16,9 +16,11 @@
     "docker:build": "docker build -t docker run -e SESSION_ID=$SESSION_ID knightbot"
   },
   "keywords": [
-    "whatsapp-bot"
+    "whatsapp-bot",
+    "public",
+    "baileys"
   ],
-  "author": "",
+  "author": "ASUNAX",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
@@ -33,6 +35,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.4.5",
     "events": "^3.3.0",
+    "express": "^4.18.2",
     "file-type": "^21.3.0",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.1",
