--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "krishiranMD",
   "version": "1.0.0",
-  "description": "WhatsApp Bot Public",
+  "description": "WhatsApp Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -16,17 +16,15 @@
     "docker:build": "docker build -t docker run -e SESSION_ID=$SESSION_ID knightbot"
   },
   "keywords": [
-    "whatsapp-bot",
-    "public",
-    "baileys"
+    "whatsapp-bot"
   ],
-  "author": "ASUNAX",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hapi/boom": "^10.0.1",
-    "@types/node": "^20.0.0",
+    "@types/node": "^18.0.6",
     "@whiskeysockets/baileys": "^v7.0.0-rc.9",
     "awesome-phonenumber": "^5.9.0",
     "axios": "^1.8.4",
@@ -35,8 +33,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.4.5",
     "events": "^3.3.0",
-    "express": "^4.18.2",
-    "file-type": "^21.3.0",
+    "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.1",
     "fs-extra": "^11.2.0",
@@ -79,7 +76,6 @@
     "jimp": "^1.6.0"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=18.0.0"
   }
 }
